5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1745_3089.log
== TEST (2019-05-15 14:25:50) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
	print (Esquerda)
	
else ( soma > 0 ):
	print(Direita)
-- ERROR:
File "XXXX", line 5
    print (Esquerda)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:05) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
	print ("Esquerda")
	
else ( soma > 0 ):
	print(Direita)
-- ERROR:
File "XXXX", line 5
    print ("Esquerda")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:21) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else ( soma > 0 ):
	print(Direita)
-- ERROR:
File "XXXX", line 7
    else ( soma > 0 ):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:30) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else ( soma > 0 )
	print(Direita)
-- ERROR:
File "XXXX", line 7
    else ( soma > 0 )
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:40) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else
	( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:45) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else()
	( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:49) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else():
	( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:26:51) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else():
	( soma > 0 )
		print(Direita)
-- EXECUTION TIME:
0.142078
-- ERROR:
  File "/home/codebench/codes/1745/3089/main.py", line 7
    else():
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:07) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else( soma > 0 )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:29) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else( "soma > 0" )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else( "soma > 0" )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:27:31) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma ):
	if ( soma < 0 ):
		print(Esquerda)
	
else( "soma > 0" )
		print(Direita)
-- EXECUTION TIME:
0.144509
-- ERROR:
  File "/home/codebench/codes/1745/3089/main.py", line 7
    else( "soma > 0" )
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:28) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma > 0 ):
	if ( soma < 0 ):
		print(Esquerda)
	
else( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else( soma > 0 )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:39) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma > 0 ):
	if ( soma < 0 ):
		print(Esquerda)
	
else ( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else ( soma > 0 )
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:29:40) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma > 0 ):
	if ( soma < 0 ):
		print(Esquerda)
	
else ( soma > 0 )
		print(Direita)
-- EXECUTION TIME:
0.170213
-- ERROR:
  File "/home/codebench/codes/1745/3089/main.py", line 7
    else ( soma > 0 )
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:50) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma > 0 ):
	if ( soma < 0 ):
		print(Esquerda)
	
else ( soma > 0 )
	print(Direita)
-- ERROR:
File "XXXX", line 7
    else ( soma > 0 )
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:55) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma > 0 ):
	if ( soma < 0 ):
		print(Esquerda)
	
else
	( soma > 0 )
		print(Direita)
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:32:34) 
-- CODE:
soma = int(input("Somatório geral dos movimentos: "))

while ( soma > 0 ):
	if ( soma < 0 ):
		print(Esquerda)
	
else
	( soma > 0 )
		print(Direita)
-- EXECUTION TIME:
0.244265
-- ERROR:
  File "/home/codebench/codes/1745/3089/main.py", line 7
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
